# cleanup

./: .gitignore  README.md  __main__.py  cleanup_bin  cleanup_bin.spec  pyproject.toml
cleanup/: __init__.py  colors.py  directories.py  management.py
cleanup/commands/: remove_duplicates.py
