[tool.poetry]
name = "cleanup"
version = "0.1.0"
description = "Declutter your MacOS system"
authors = ["Jhonas Palad <jhonasemmanuel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
tdqm = "^0.0.1"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
